--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "js-sha256": "^0.9.0",
+    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.4"
   }
 }
